--- a/src/components/auth/login.html
+++ b/src/components/auth/login.html
@@ -11,18 +11,18 @@
                     <div class="panel-body" style="padding: 15px; border-top: 1px solid #82bc4b;">
                         <h4 class="text-center" style="margin-bottom: 20px; color: #5A5A5A;">Kickstart your city's entrepreneurial ecosystem</h4>
                         <h4 class="text-center" style="margin-bottom: 13px;">
-                            <button ladda="login.working" class="ladda-button btn btn-info" ng-click="login.authenticate('linkedin')" ng-class="{'disabled' : login.working}">Log in using Linkedin</button>
+                            <button ladda="auth.working" class="ladda-button btn btn-info" ng-click="auth.authenticate('linkedin')" ng-class="{'disabled' : auth.working}">Log in using Linkedin</button>
                             <br><p style="font-size:11px; margin: 12px 0 -12px 0;">We use Linkedin to retrieve your basic profile details only.</p>
                         </h4>
 
-                        <div ng-show="login.alert">
-                            <uib-alert type="{{login.alert.type}}" style="margin: 2px;" ng-click="login.alert = undefined"><span ng-bind-html="login.alert.msg | safe_html"></span></uib-alert>
+                        <div ng-show="auth.alert">
+                            <uib-alert type="{{auth.alert.type}}" style="margin: 2px;" ng-click="auth.alert = undefined"><span ng-bind-html="auth.alert.msg | safe_html"></span></uib-alert>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
-        <li style="list-style: none;" class="text-center"><span id="quote" random-quote></span><a ng-click="login.clickToTweet()"><img id="tweet-this" src="/public/images/twitter-16.png" style="margin-left: 5px; margin-top: -4px; height: 13px; width: 13px;"/></a></li>
+        <li style="list-style: none;" class="text-center"><span id="quote" random-quote></span><a ng-click="auth.clickToTweet()"><img id="tweet-this" src="/public/images/twitter-16.png" style="margin-left: 5px; margin-top: -4px; height: 13px; width: 13px;"/></a></li>
         <br>
         <div class="row">
             <div class="col-md-12 text-center">
